src/test/resources/extension/valid/newtype/newTypeRead.awsl
begin

newtype Some is
    int x;
    char c
end

Some some = Some(1, 'a');
int x = some.x;
println x;
some.x = 200;
char y = some.c;
x = some.x;
println x;
println y;

end