src/test/resources/extension/invalid/newtype/sameTag.awsl
begin

newtype Mirror is union
    Hi of (int x);
    Hi of (char x, int y);
end

exit 0;

end